<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagenCuadro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/etiquetaFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_hoy"
            android:textColor="@color/crema"
            android:background="@drawable/bg_etiqueta_fecha"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="@id/imagenCuadro"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonLike"
            android:contentDescription="@string/me_gusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_favorite_outline"
            app:layout_constraintBottom_toBottomOf="@id/imagenCuadro"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/crema"
            app:backgroundTint="@color/marron"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonCompartir"
            android:contentDescription="@string/compartir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@id/botonLike"
            app:layout_constraintEnd_toStartOf="@id/botonLike"
            app:layout_constraintTop_toTopOf="@id/botonLike"
            app:tint="@color/crema"
            app:backgroundTint="@color/marron"/>

        <TextView
            android:id="@+id/textoTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagenCuadro" />

        <TextView
            android:id="@+id/textoAutor"
            android:textColor="@color/marron"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableTint="@color/marron"
            android:gravity="center_vertical"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textoTitulo" />

        <LinearLayout
            android:id="@+id/contenedorFechaGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textoAutor">

            <TextView
                android:id="@+id/textoFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/verdeGris" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text=" · "
                android:textColor="@color/verdeGris" />

            <TextView
                android:id="@+id/textoGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/verdeGris" />
        </LinearLayout>

        <View
            android:id="@+id/separador"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/verdeGris"
            android:alpha="0.4"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contenedorFechaGenero" />

        <TextView
            android:id="@+id/textoDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separador"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>